--- a/frontend/src/app/view/login/login.component.css
+++ b/frontend/src/app/view/login/login.component.css
@@ -1,8 +1,3 @@
-.main-container > div {
-  _border: 1px dashed skyblue;
-  width: 100%;
-}
-
 :host {
   width: 100%;
   height: 100%;
@@ -13,14 +8,14 @@
   align-items: center;
 }
 
-.hero {
+.hero-section {
   flex: 8;
   height: 100%;
   overflow: hidden;
+  position: relative;
 }
 .main-container {
   flex: 4;
-  _height: 100%;
   min-height: 100%;
 
   display: flex;
@@ -30,15 +25,16 @@
 
   box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.25);
 }
-
-.logo {
+.logo-section {
+  width: 100%;
   flex: 1;
 
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.form {
+.form-section {
+  width: 100%;
   flex: 5;
 
   display: flex;
@@ -46,47 +42,58 @@
   align-items: center;
   justify-content: center;
 }
-.form .fields-container {
-  width: 50%;
-}
-.switch {
+.switch-section {
+  width: 100%;
   flex: 1;
 
   display: flex;
   justify-content: center;
 }
 
-.logo > img {
+.hero-image {
+  position: absolute;
+  transition: opacity 3s ease-out;
+}
+.hero-image--shown {
+  opacity: 1;
+}
+.hero-image--hidden {
+  opacity: 0;
+}
+
+.logo-image {
   width: 164px;
 }
 
-.form h3 {
+.fields-container {
+  width: 50%;
+}
+.fields-container h3 {
   font-family: 'Oswald', sans-serif;
   font-weight: 400;
   font-size: var(--px36);
   margin-bottom: var(--px60);
 }
-
-.form p {
+.fields-container p {
   width: 100%;;
   margin: 0;
 }
-
-.form .button {
+.fields-container .button {
   margin-top: var(--px40);
   width: 100%;
 }
 
-.switch span {
+.switch-section span {
   color: #868686;
   font-size: var(--px14);
 }
-.switch a {
+.switch-section a {
   color: #2A669C;
   text-decoration: none;
 }
-.switch a:hover {
+.switch-section a:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 
@@ -101,18 +108,18 @@
     min-height: 100%;
   }
 
-  .logo {
+  .logo-section {
     margin-bottom: 20px;
   }
-
-  .form h3 {
-    margin-bottom: var(--px30);
+  .switch-section {
+    padding: 50px 0;
   }
-  .form .fields-container {
+
+  .fields-container {
     width: 75%;
   }
 
-  .switch {
-    padding: 50px 0;
+  .fields-container h3 {
+    margin-bottom: var(--px30);
   }
 }
