Frontend & Proxy: signup with email and login on success signup

--- a/frontend/src/app/view/login/login.component.html
+++ b/frontend/src/app/view/login/login.component.html
@@ -63,6 +63,7 @@
       <app-text-field
         [label]="'Name'"
         [fieldSize]="'full'"
+        [error]="signUpForm.nameError"
         [(value)]="signUpForm.name"
       >
       </app-text-field>
