Frontend: better scenarios layout

--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -1,6 +1,7 @@
 <app-sidebar-page-layout
   [title]="'Test Scenarios'"
-  [description]="'Each scenario will test one page, component or action against one or many viewport sizes'">
+  [description]="'Each scenario will test one page, component or action against one or many viewport sizes'"
+  [hideSidebar]="true">
 
   <div class="page-actions-placeholder">
     <ul class="page-actions">
