--- a/frontend/src/app/view/login/login.component.html
+++ b/frontend/src/app/view/login/login.component.html
@@ -44,6 +44,10 @@
       >
       </app-text-field>
 
+      <p class="note">
+        By continuing, you agree to our <a href="">Terms of Service</a> and <a href="">Privacy Policy</a>.
+      </p>
+
       <p class="error-alert" *ngIf="signInForm.responseError">
         {{ signInForm.responseError }}
       </p>
@@ -94,7 +98,7 @@
       >
       </app-text-field>
 
-      <p>
+      <p class="note">
         Creating an account means you’re okay with our <a href="">Terms of Service</a>, <a href="">Privacy Policy</a> and
         <a href="">Beta Service Agreement</a>
       </p>
