--- a/frontend/src/app/view/settings/settings.component.html
+++ b/frontend/src/app/view/settings/settings.component.html
@@ -171,30 +171,45 @@
 
         <p>Select screen sizes to use in all your test cases. You can override list of used viewports for particular scenario at its configuration page.</p>
 
-        <h4 class="tabs-content-subtitle">Popular Viewports</h4>
+        <h4 class="tabs-content-subtitle">Active Viewports</h4>
         <app-viewports-selector
           [viewports]="viewports$ | async"
           [selected]="selectedViewports$ | async"
           (selectionChanged)="viewportsChangeHandler('desktop', $event)"
         >
         </app-viewports-selector>
-<!--
-        <h4 class="tabs-content-subtitle">Popular Mobile Viewports</h4>
-        <app-viewports-selector
-          [viewports]="viewports$ | async"
-          [selected]="selectedViewports$ | async"
-          (selectionChanged)="viewportsChangeHandler('mobile', $event)"
-        >
-        </app-viewports-selector>
 
-        <h4 class="tabs-content-subtitle">Popular Tablet Viewports</h4>
-        <app-viewports-selector
-          [viewports]="viewports.tablet"
-          [selected]="viewports.tablet_selected"
-          (selectionChanged)="viewportsChangeHandler('tablet', $event)"
-        >
-        </app-viewports-selector>
--->
+        <hr class="separation-line">
+        <h4 class="tabs-content-subtitle">Add Custom Viewport Size</h4>
+
+        <app-text-field
+          [label]="'Label'"
+          [fieldSize]="'350'"
+          [placeholder]="'1920 × 1080'"
+          [(value)]="customViewport.label"
+        ></app-text-field>
+
+        <div class="horizontal-fields-container">
+          <app-text-field
+            [label]="'Width in pixels'"
+            [fieldSize]="'150'"
+            [placeholder]="'1920'"
+            [(value)]="customViewport.width"
+          ></app-text-field>
+
+          <app-text-field
+            [label]="'Height in pixels'"
+            [fieldSize]="'150'"
+            [placeholder]="'1080'"
+            [(value)]="customViewport.height"
+          ></app-text-field>
+        </div>
+
+        <app-form-button
+          [isDisabled]="!customViewport.width || !customViewport.height"
+          (clickButton)="addCustomViewportHandler(customViewport)">
+          Add Custom Viewport
+        </app-form-button>
 
 
         <hr class="separation-line">
@@ -225,40 +240,7 @@
         >
         </app-viewports-selector>
 
-        <hr class="separation-line">
-        <h4 class="tabs-content-subtitle">Add Custom Viewport Size</h4>
 
-        <app-text-field
-          [label]="'Label'"
-          [fieldSize]="'350'"
-          [placeholder]="'Custom Screen'"
-          [value]="viewports.createCustomViewport.label"
-          (valueChange)="setCustomViewportHandler('label', $event)"
-        ></app-text-field>
-
-        <div class="horizontal-fields-container">
-          <app-text-field
-            [label]="'Width in pixels'"
-            [fieldSize]="'150'"
-            [placeholder]="'1920'"
-            [value]="viewports.createCustomViewport.width"
-            (valueChange)="setCustomViewportHandler('width', $event)"
-          ></app-text-field>
-
-          <app-text-field
-            [label]="'Height in pixels'"
-            [fieldSize]="'150'"
-            [placeholder]="'1080'"
-            [value]="viewports.createCustomViewport.height"
-            (valueChange)="setCustomViewportHandler('height', $event)"
-          ></app-text-field>
-        </div>
-
-        <app-form-button
-          [inProgress]="updatingViewportsList"
-          (click)="addViewportHandler()">
-          Add Viewport
-        </app-form-button>
         -->
 
 
