Frontend: "Load more" for job history (UI part)

--- a/frontend/src/app/view/jobs/jobs.component.html
+++ b/frontend/src/app/view/jobs/jobs.component.html
@@ -49,6 +49,10 @@
     >
     </app-history-table>
 
+    <div class="more-section">
+      <button (click)="loadMoreHandler()" class="button button--white">Load More</button>
+    </div>
+
   </div>
 
   <div class="sidebar-placeholder">
