Frontend: Hide "Load more" if no records in job history table

--- a/frontend/src/app/view/jobs/jobs.component.html
+++ b/frontend/src/app/view/jobs/jobs.component.html
@@ -49,7 +49,7 @@
     >
     </app-history-table>
 
-    <div class="more-section">
+    <div class="more-section" *ngIf="(jobs$ | async).length > 0">
 
       <button *ngIf="(noMoreRecords$ | async) === false"
               class="button button--white"
